--- a/README.Rmd
+++ b/README.Rmd
@@ -13,10 +13,11 @@ knitr::opts_chunk$set(
 )
 ```
 
-# Singer for R <img src='man/figures/logo.png' align="right" height="139" />
+# Singer for R <img src="man/figures/logo.png" align="right" height="139"/>
 
 <!-- badges: start -->
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
+[![Lifecycle:
+experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 <!-- badges: end -->
 
-R interface to the Singer open source data replication standard. 
+R interface to the Singer data replication standard.
